5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1616_2926.log
== TEST (2019-04-01 15:19:04) 
-- CODE:
acai = float(input("quantidade de acai: "))
esfirra = int(input("quantidade de esfirra: "))

Kg = acai / 1000
preco_acai = 24 * Kg
preco_esfirra = esfirra * 3
Total = preco_acai = preco_esfirra

print(round(total, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(total, 1))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:49) 
-- CODE:
acai = float(input("quantidade de acai: "))
esfirra = int(input("quantidade de esfirra: "))

Kg = acai / 1000
preco_acai = 24 * Kg
preco_esfirra = esfirra * 3
total = preco_acai = preco_esfirra

print(round(total, 1))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:09) 
-- CODE:
acai = float(input("quantidade de acai: "))
esfirra = int(input("quantidade de esfirra: "))

Kg = acai / 1000
preco_acai = 24 * Kg
preco_esfirra = esfirra * 3
total = preco_acai + preco_esfirra

print(round(total, 1))
-- OUTPUT:
15.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:20:21) 
-- CODE:
acai = float(input("quantidade de acai: "))
esfirra = int(input("quantidade de esfirra: "))

Kg = acai / 1000
preco_acai = 24 * Kg
preco_esfirra = esfirra * 3
total = preco_acai + preco_esfirra

print(round(total, 1))
-- EXECUTION TIME:
0.216786
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
15.1
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
22.1
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
23.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:08) 
-- CODE:
acai = float(input("quantidade de acai no copo: "))
esfirra = int(input("quantidade de esfirra: "))

Kg = acai / 1000
preco_acai = 24 * Kg
preco_esfirra = esfirra * 3
total = preco_acai + preco_esfirra

print(round(total, 1))
-- OUTPUT:
15.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:21:22) 
-- CODE:
acai = float(input("quantidade de acai no copo: "))
esfirra = int(input("quantidade de esfirra: "))

Kg = acai / 1000
preco_acai = 24 * Kg
preco_esfirra = esfirra * 3
total = preco_acai + preco_esfirra

print(round(total, 1))
-- EXECUTION TIME:
0.16425
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
15.1
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
22.1
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
23.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:51) 
-- CODE:
acai = int(input("quantidade de acai no copo: "))
esfirra = int(input("quantidade de esfirra: "))

Kg = acai / 1000
preco_acai = 24 * Kg
preco_esfirra = esfirra * 3
total = preco_acai + preco_esfirra

print(round(total, 1))
-- OUTPUT:
15.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:22:01) 
-- CODE:
acai = int(input("quantidade de acai no copo: "))
esfirra = int(input("quantidade de esfirra: "))

Kg = acai / 1000
preco_acai = 24 * Kg
preco_esfirra = esfirra * 3
total = preco_acai + preco_esfirra

print(round(total, 1))
-- EXECUTION TIME:
0.214637
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
15.1
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
22.1
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
23.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:22:32) 
-- CODE:
acai = int(input("quantidade de acai no copo: "))
esfirra = int(input("quantidade de esfirra: "))

Kg = acai / 1000
preco_acai = 24 * Kg
preco_esfirra = esfirra * 3
total = preco_acai + preco_esfirra

float(print(round(total, 1)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    float(print(round(total, 1)))
TypeError: float() argument must be a string or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:22:54) 
-- CODE:
acai = int(input("quantidade de acai no copo: "))
esfirra = int(input("quantidade de esfirra: "))

Kg = acai / 1000
preco_acai = 24 * Kg
preco_esfirra = esfirra * 3
total = preco_acai + preco_esfirra

print(round(total, 2))
-- OUTPUT:
15.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:23:02) 
-- CODE:
acai = int(input("quantidade de acai no copo: "))
esfirra = int(input("quantidade de esfirra: "))

Kg = acai / 1000
preco_acai = 24 * Kg
preco_esfirra = esfirra * 3
total = preco_acai + preco_esfirra

print(round(total, 2))
-- EXECUTION TIME:
0.223987
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
15.1
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
22.13
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
23.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
